// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Foldable should be folded by default 1`] = `
<Themed(styled.div)>
  <Summary
    isFoldable={true}
    isFolded={true}
    key=".0"
    toggleFold={[Function]}
  >
    foo summary
  </Summary>
  <Details
    isFolded={true}
    key=".1"
    toggleFold={[Function]}
  >
    Foo Details
  </Details>
</Themed(styled.div)>
`;

exports[`Foldable toggleFold should change folded state 1`] = `
<Themed(styled.div)>
  <Summary
    isFoldable={true}
    isFolded={false}
    key=".0"
    toggleFold={[Function]}
  >
    foo summary
  </Summary>
  <Details
    isFolded={false}
    key=".1"
    toggleFold={[Function]}
  >
    Foo Details
  </Details>
</Themed(styled.div)>
`;
